--- a/new-year-countdown/index.html
+++ b/new-year-countdown/index.html
@@ -16,6 +16,13 @@
       <div id="minute">00</div>
       <div id="second">00</div>
     </div>
+        <div class="year">2024</div>
+    <div class="countdown">
+      <div id="day">00</div>
+      <div id="hour">00</div>
+      <div id="minute">00</div>
+      <div id="second">00</div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
